.deploy/overlay/staging/autoscaler.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-pod-autoscaler
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: rabbit-pod-autoscaler
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit-pod-autoscaler
    spec:
      nodeSelector:
        kubernetes.io/role: agent
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/agent
      serviceAccountName: rabbit-pod-autoscaler
      containers:
        - name: rabbit-pod-autoscaler
          image: mitigaaceacr.azurecr.io/k8s-rabbit-pod-autoscaler:3315.8b10dbb
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
