.deploy/overlay/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: internal-nginx
  tls:
  - hosts:
    - rabbit.staging.mitigasolutions.com
    secretName: rabbit-certificate
  rules:
  - host: rabbit.staging.mitigasolutions.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbit
            port:
              number: 15672
